# dbdiff

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  migrate.sql
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml  schema-check.yml
doc/: architecture.md  ux_review_ru.md
src/: ci.rs  cli.rs  diff.rs  error.rs  lib.rs  main.rs  migration.rs  model.rs  output.rs
src/commands/: diff.rs  helpers.rs  init.rs  mod.rs  snapshot.rs  tables.rs  validate.rs
src/config/: filter.rs  mod.rs
src/loader/: mod.rs  mysql.rs  postgres.rs  sqlfile.rs  sqlite.rs
src/migration/: mod.rs  sql.rs
tests/: cli.rs  config.rs  constraints.rs
tests/fixtures/: dbdiff.yml  schema_a.sql  schema_b.sql  schema_c.sql  schema_d.sql
