[package]
name = "dbdiff"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["rekurt"]
description = "Compare database schemas, detect drift, and generate migrations"
license = "MIT"
repository = "https://github.com/rekurt/dbdiff"
homepage = "https://github.com/rekurt/dbdiff"
readme = "README.md"
keywords = ["database", "schema", "diff", "migration", "postgresql"]
categories = ["command-line-utilities", "database"]
exclude = [
    ".github/",
    "tests/fixtures/",
    "benches/",
    "doc/",
    ".editorconfig",
    "deny.toml",
    "cliff.toml",
]

[[bin]]
name = "dbdiff"
path = "src/main.rs"

[features]
default = ["postgres", "mysql", "sqlite"]
postgres = ["dep:tokio-postgres", "dep:postgres-native-tls", "dep:native-tls"]
mysql = ["dep:mysql_async"]
sqlite = ["dep:rusqlite"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-postgres = { version = "0.7", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
mysql_async = { version = "0.36", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
colored = "3"
indicatif = "0.17"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
